Setup.py does not read requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # dependencies for installation
 #
-# Read by setup.py and buildscripts/dependencies.sh
+# Read by buildscripts/dependencies.sh
 #
 flask
 flask-restful
