--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-# dependencies for installation
 #
-# Read by buildscripts/dependencies.sh
-#
-flask
-flask-restful
+flask==1.1.2
+flask-restful==0.3.8
