tidy build system up

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [coverage:run]
 omit = lnxproc/about.py, lnxproc/entry.py
+
+[pycodestyle]
+#    Allowed options are: exclude, filename,
+#    select, ignore, max-line-length, max-doc-length, hang-closing, count,
+#    format, quiet, show-pep8, show-source, statistics, verbose.
+show-pep8 = True
+
